--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,9 @@
 ---
 layout: page
-title: Gopal's blog
+title: Articles
 ---
 <ul>
 	{% for post in site.posts %}
-		<li><a hred="{{ post.url }}">{{ post.title }}</a></li>
+		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 </ul>
-
