--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,6 @@ title: Articles
 ---
 <ul>
 	{% for post in site.posts %}
-		<li><a href="{{site.title}}{{ post.url }}">{{ post.title }}</a></li>
+		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 </ul>
