--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,9 @@
 ---
-layout: home
+layout: page
 title: Articles
 ---
 <ul>
 	{% for post in site.posts %}
-		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><a href="{{baseurl}}{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 </ul>
